--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "html-to-image": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-qr-code": "^2.0.15"
+    "react-qrcode-logo": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
